# rubber-duck

./: CMakeLists.txt  README.md  build-code.sh
.github/workflows/: build-job.yml
core/include/: logger.hpp  parser.hpp  rubber_duck.hpp  runner.hpp
core/src/: main.cpp  parser.cpp  runner.cpp
